<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/fondo2"
    tools:context=".Login">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineIZQ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="50dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineDER"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="50dp" />

    <ImageView
        android:id="@+id/imgLogin"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/round"
        android:contentDescription="@string/imgLogin"
        app:layout_constraintEnd_toStartOf="@+id/guidelineDER"
        app:layout_constraintStart_toStartOf="@+id/guidelineIZQ"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_login" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_user"
        style="@style/OutlinedRoundedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:focusableInTouchMode="true"
        app:layout_constraintEnd_toStartOf="@+id/guidelineDER"
        app:layout_constraintStart_toStartOf="@+id/guidelineIZQ"
        app:layout_constraintTop_toBottomOf="@+id/imgLogin"
        app:startIconDrawable="@drawable/ic_person"
        app:startIconTint="@color/colorPrimary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_user"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/usuario"
            android:inputType="textPersonName"
            android:textStyle="normal" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_pass"
        style="@style/OutlinedRoundedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toStartOf="@+id/guidelineDER"
        app:layout_constraintStart_toStartOf="@+id/guidelineIZQ"
        app:layout_constraintTop_toBottomOf="@+id/til_user"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorPrimaryDark"
        app:startIconDrawable="@drawable/ic_lock"
        app:startIconTint="@color/colorPrimary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_pass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textStyle="normal" />
    </com.google.android.material.textfield.TextInputLayout>

    <Switch
        android:id="@+id/swRecordarUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/swRecordarUser"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guidelineDER"
        app:layout_constraintHorizontal_bias="0.98"
        app:layout_constraintStart_toStartOf="@+id/guidelineIZQ"
        app:layout_constraintTop_toBottomOf="@+id/til_pass" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/btnLogin"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toStartOf="@+id/guidelineDER"
        app:layout_constraintStart_toStartOf="@+id/guidelineIZQ"
        app:layout_constraintTop_toBottomOf="@+id/swRecordarUser" />

    <TextView
        android:id="@+id/tvRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/tvRegistro"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guidelineDER"
        app:layout_constraintStart_toStartOf="@+id/guidelineIZQ"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>