<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/fondo"
    tools:context=".Inicio" >

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineIZQ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="50dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineDER"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="50dp" />

    <TextView
        android:id="@+id/tit_inicio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:text="@string/inicio"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintEnd_toStartOf="@+id/guidelineDER"
        app:layout_constraintStart_toStartOf="@+id/guidelineIZQ"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/msj_inicio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/msj_inicio"
        android:textColor="@color/colorBlue"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toStartOf="@+id/guidelineDER"
        app:layout_constraintStart_toStartOf="@+id/guidelineIZQ"
        app:layout_constraintTop_toBottomOf="@+id/tit_inicio" />

    <Button
        android:id="@+id/btnInicio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/btnInicio"
        android:textSize="14sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toStartOf="@+id/guidelineDER"
        app:layout_constraintStart_toStartOf="@+id/guidelineIZQ"
        app:layout_constraintTop_toBottomOf="@+id/msj_inicio" />

    <Button
        android:id="@+id/btnActualizar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/btnRegistro"
        android:textSize="14sp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guidelineDER"
        app:layout_constraintStart_toStartOf="@+id/guidelineIZQ"
        app:layout_constraintTop_toBottomOf="@+id/btnInicio"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>