<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/fondo2"
    tools:context=".RegistroCumple">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineIZQ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="50dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineDER"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="50dp" />

            <TextView
                android:id="@+id/txtRegistroCumple"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/txtRegistroCumple"
                android:textColor="@color/colorBlue"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/guidelineDER"
                app:layout_constraintStart_toStartOf="@+id/guidelineIZQ"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_nombre"
                style="@style/OutlinedRoundedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:focusableInTouchMode="true"
                app:layout_constraintEnd_toStartOf="@+id/guidelineDER"
                app:layout_constraintStart_toStartOf="@+id/guidelineIZQ"
                app:layout_constraintTop_toBottomOf="@+id/txtRegistroCumple"
                app:startIconDrawable="@drawable/ic_person"
                app:startIconTint="@color/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombreCumple"
                    android:inputType="text"
                    android:textStyle="normal" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_fechaC"
                style="@style/OutlinedRoundedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toStartOf="@+id/guidelineDER"
                app:layout_constraintStart_toStartOf="@+id/guidelineIZQ"
                app:layout_constraintTop_toBottomOf="@+id/til_nombre"
                app:startIconDrawable="@drawable/ic_cake"
                app:startIconTint="@color/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_fechaC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/fechaC"
                    android:inputType="date" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnActualizar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/btnGuardar"
                app:cornerRadius="20dp"
                app:layout_constraintEnd_toStartOf="@+id/guidelineDER"
                app:layout_constraintStart_toStartOf="@+id/guidelineIZQ"
                app:layout_constraintTop_toBottomOf="@+id/til_fechaC" />

            <TextView
                android:id="@+id/tvMuestra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/tvMuestra"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/guidelineDER"
                app:layout_constraintStart_toStartOf="@+id/guidelineIZQ"
                app:layout_constraintTop_toBottomOf="@+id/btnActualizar" />

            <ImageView
                android:id="@+id/imgTorta"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/imgTorta"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvMuestra"
                app:srcCompat="@drawable/torta" />

            <ImageButton
                android:id="@+id/ibtnCerrar"
                android:layout_width="28dp"
                android:layout_height="23dp"
                android:layout_marginTop="16dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/ibtnCerrar"
                android:scaleType="center"
                android:tint="@color/design_default_color_error"
                app:layout_constraintEnd_toStartOf="@+id/tvCerrar"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/guidelineIZQ"
                app:layout_constraintTop_toBottomOf="@+id/imgTorta"
                app:srcCompat="@android:drawable/ic_lock_power_off" />

            <TextView
                android:id="@+id/tvCerrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/tvCerrar"
                android:textColor="@color/design_default_color_error"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/guidelineDER"
                app:layout_constraintHorizontal_bias="0.58"
                app:layout_constraintStart_toStartOf="@+id/guidelineIZQ"
                app:layout_constraintTop_toBottomOf="@+id/imgTorta" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>